[package]
name = "fuiz"
version = "0.1.0"
edition = "2021"

[features]
https = []

[lib]
crate-type = ["lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-where = "1"
enum-map = { version = "2", features = ["serde"] }
fastrand = "2"
itertools = "0.12"
kinded = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
rustrict = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["chrono"] }
static-toml = "1.2.0"
thiserror = "1.0"
uuid = { version = "1", features = ["v4", "serde"] }
garde-actix-web = "0.7"
garde = "0.18"
derive_more = "0.99"
num-integer = "0.1"
petname = "2"
heck = "0.5"
pluralizer = "0.4.0"
web-time = { version = "1.1.0", features = ["serde"] }
once_cell_serde = { version = "1.17.1", features = ["serde"] }
