[package]
name = "fuiz"
version = "0.1.0"
edition = "2021"

[features]
https = []

[lib]
crate-type = ["lib"]

[dependencies]
derive-where = "1"
enum-map = { version = "2", features = ["serde"] }
fastrand = { version = "2", features = ["js"] }
itertools = "0.14"
kinded = "0.3"
log = "0.4"
pretty_env_logger = "0.5"
rustrict = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3", features = ["chrono"] }
static-toml = "1.3"
thiserror = "2.0"
uuid = { version = "1", features = ["v4", "serde", "js"] }
garde = { version = "0.22", features = ["derive"] }
derive_more = { version = "2", features = ["full"] }
num-integer = "0.1"
petname = "2"
heck = "0.5"
pluralizer = "0.5"
web-time = { version = "1.1", features = ["serde"] }
once_cell_serde = { version = "1.20", features = ["serde"] }
romanname = "0.1.1"
